--- a/config.ini.example
+++ b/config.ini.example
@@ -6,8 +6,8 @@ client_id=577508122629767179
 
 large_image={version_image}
 large_text={os_hf} - {version_hf}
-small_image={architecture_image}
-small_text={architecture}-bit
+small_image=
+small_text=
 details={version_hf} ({architecture}-bit)
 state=In a Virtual Machine
 
